--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ html {
     width: 100%;
 }
 body {
-    background-color: #E0E0E0;
+    background-color: grey;
     margin: 0px;
     height: 100%;
     width: 100%;
