--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@ main {
     font-size: 20px;
     height: 100%;
     max-height: 700px;
-    
+    max-width: fit-content;
 }
 .meal-intro > h1 {
     margin: 0 auto;
@@ -116,6 +116,7 @@ main {
     gap: 12px;
     width: 100%;
     height: 100%;
+    max-width: 1800px;
 }
 .meal {
     flex: 1 1 260px;
@@ -179,10 +180,13 @@ main {
         flex-direction: column;
     }
     .nav-left, .nav-right {
-        flex: 1 0 auto;
+        flex: 1 1 auto;
         justify-content: center;
         margin-left: 0px;
         margin-right: 0px;
+    }
+    .nav-right {
+        flex-wrap: wrap;
     }
     .nav-right > a {
         margin-top: 0px;
